# Prusa-Firmware-Buddy

./: CMakeLists.txt
include/marlin/: Configuration.h  Configuration_A3ides_2209_MINI_delta.h  Configuration_A3ides_2209_MINI_delta_adv.h  Configuration_adv.h
lib/: AddMarlin.cmake
lib/Marlin/Marlin/src/gcode/calibrate/: G33.cpp
lib/Marlin/Marlin/src/lcd/extensible_ui/: ui_api.cpp
lib/Marlin/Marlin/src/module/: motion.cpp  motion.h
src/common/: client_fsm_types.h  client_response.cpp  client_response.hpp  crash_recovery.cpp  crash_recovery.h  general_response.hpp  marlin_client.c  marlin_client.h  marlin_server.cpp  marlin_server.h  marlin_vars.h
src/gui/: lazyfilelist.h  menu_vars.cpp  resource.c  resource.h  screen_home.cpp  screen_home.hpp  screen_menu.hpp  screen_menu_settings.cpp  screen_menu_settings.hpp  screen_menu_tune.cpp  screen_printing.cpp  screen_printing.hpp  screen_splash.cpp  screen_splash.hpp  status_footer.cpp  status_footer.h  window_header.hpp
src/gui/dialogs/: DialogFactory.cpp  DialogFactory.hpp  DialogFirstLayer.cpp  DialogFirstLayer.hpp  dialog_response.cpp  dialog_response.hpp  liveadjust_z.cpp  window_dlg_wait.c
src/gui/test/: screen_test_gui.cpp
src/guiapi/include/: MItem_tools.hpp  st7789v.h  window_event.hpp  window_frame.hpp
src/guiapi/src/: MItem_menus.cpp  MItem_tools.cpp
src/marlin_stubs/: G26.cpp  G26.hpp  gcode.cpp
tests/stubs/: gui.hpp
tests/unit/: CMakeLists.txt
tests/unit/guiapi/: CMakeLists.txt  window_menu_tests.cpp
